--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.dmariani.kotlinapp.ui.activity.MainActivity">
+    tools:context=".ui.activity.MainActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/text_input_user_name"
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:hint="@string/user_name_hint" />
+            android:hint="@string/user_name_hint"
+            android:textSize="@dimen/large_text_size" />
     </android.support.design.widget.TextInputLayout>
 
     <TextView
@@ -30,6 +31,7 @@
         android:layout_marginBottom="@dimen/form_item_vertical_spacing"
         android:gravity="center"
         android:text="@string/user_description_message"
+        android:textSize="@dimen/default_text_size"
         app:layout_constraintBottom_toTopOf="@+id/text_input_user_name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
@@ -43,6 +45,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_input_user_name" />
-
 
 </android.support.constraint.ConstraintLayout>
