--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="zero_dimension">0dp</dimen>
     <dimen name="form_item_vertical_spacing">50dp</dimen>
     <dimen name="screen_padding">20dp</dimen>
+    <dimen name="default_text_size">24sp</dimen>
+    <dimen name="large_text_size">30sp</dimen>
 </resources>
