--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="screen_padding">20dp</dimen>
     <dimen name="default_text_size">24sp</dimen>
     <dimen name="large_text_size">30sp</dimen>
+    <dimen name="picture_width">200dp</dimen>
+    <dimen name="picture_height">200dp</dimen>
 </resources>
